Fix docs topic list overflow

--- a/scss/mobile/fkb-m-docs.scss
+++ b/scss/mobile/fkb-m-docs.scss
@@ -7,6 +7,10 @@ body:not(.categories-list) .docs-browse {
     .topic-list {
       .main-link {
         padding: 0.5em 0;
+
+        .link-bottom-line a {
+          white-space: normal;
+        }
       }
     }
   }
